Fix:fixing of the responsiveness issue on tablets
The responsiveness for all devices hass applied even the fonts matches those of provided figma

--- a/src/output.css
+++ b/src/output.css
@@ -556,6 +556,10 @@ video {
   display: none;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -564,36 +568,60 @@ video {
   position: relative;
 }
 
-.right-20{
-  right: 5rem;
-}
-
 .top-full{
   top: 100%;
 }
 
-.right-4{
-  right: 1rem;
+.right-11{
+  right: 2.75rem;
 }
 
-.right-40{
-  right: 10rem;
+.right-0{
+  right: 0px;
 }
 
-.right-1{
-  right: 0.25rem;
+.right-2{
+  right: 0.5rem;
+}
+
+.right-1\/2{
+  right: 50%;
+}
+
+.right-20{
+  right: 5rem;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .left-0{
   left: 0px;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .z-20{
   z-index: 20;
 }
 
+.mr-36{
+  margin-right: 9rem;
+}
+
+.mr-80{
+  margin-right: 20rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .block{
@@ -604,6 +632,14 @@ video {
   display: flex;
 }
 
+.inline-flex{
+  display: inline-flex;
+}
+
+.grid{
+  display: grid;
+}
+
 .hidden{
   display: none;
 }
@@ -612,12 +648,44 @@ video {
   height: 2.5rem;
 }
 
+.h-8{
+  height: 2rem;
+}
+
 .h-full{
   height: 100%;
 }
 
-.h-8{
-  height: 2rem;
+.h-\[45vh\]{
+  height: 45vh;
+}
+
+.h-\[\]{
+  height: ;
+}
+
+.h-\[90\]{
+  height: 90;
+}
+
+.h-\[90\%\]{
+  height: 90%;
+}
+
+.h-\[490\%\]{
+  height: 490%;
+}
+
+.h-\[490\]{
+  height: 490;
+}
+
+.h-\[490px\]{
+  height: 490px;
+}
+
+.min-h-full{
+  min-height: 100%;
 }
 
 .w-10{
@@ -628,16 +696,22 @@ video {
   width: 12rem;
 }
 
-.w-full{
-  width: 100%;
-}
-
 .w-8{
   width: 2rem;
 }
 
+.w-full{
+  width: 100%;
+}
+
 .flex-1{
   flex: 1 1 0%;
+}
+
+.scale-0{
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
@@ -652,12 +726,12 @@ video {
   flex-wrap: wrap;
 }
 
-.items-end{
-  align-items: flex-end;
-}
-
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-end{
@@ -672,16 +746,28 @@ video {
   justify-content: space-between;
 }
 
-.space-y-0\.5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
+.justify-around{
+  justify-content: space-around;
 }
 
-.space-x-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+.gap-3{
+  gap: 0.75rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
+}
+
+.self-center{
+  align-self: center;
 }
 
 .truncate{
@@ -706,6 +792,16 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
 }
 
 .object-contain{
@@ -733,12 +829,17 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.text-center{
-  text-align: center;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.text-right{
-  text-align: right;
+.pt-0{
+  padding-top: 0px;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-outfit{
@@ -748,16 +849,6 @@ video {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .font-bold{
@@ -798,26 +889,7 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-gray-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
-@media not all and (min-width: 1024px){
-  .max-lg\:hidden{
-    display: none;
-  }
-}
-
 @media (min-width: 640px){
-  .sm\:flex{
-    display: flex;
-  }
-
-  .sm\:hidden{
-    display: none;
-  }
-
   .sm\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -825,8 +897,8 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:hidden{
-    display: none;
+  .md\:justify-center{
+    justify-content: center;
   }
 }
 
@@ -856,10 +928,6 @@ video {
     display: none;
   }
 
-  .lg\:w-auto{
-    width: auto;
-  }
-
   .lg\:w-48{
     width: 12rem;
   }
@@ -868,8 +936,32 @@ video {
     flex-direction: row;
   }
 
-  .lg\:bg-transparent{
-    background-color: transparent;
+  .lg\:items-end{
+    align-items: flex-end;
+  }
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
+  }
+
+  .lg\:gap-4{
+    gap: 1rem;
+  }
+
+  .lg\:gap-48{
+    gap: 12rem;
+  }
+
+  .lg\:self-center{
+    align-self: center;
   }
 
   .lg\:bg-white{
@@ -880,12 +972,6 @@ video {
   .lg\:text-black{
     --tw-text-opacity: 1;
     color: rgb(0 0 0 / var(--tw-text-opacity, 1));
-  }
-
-  .lg\:shadow-none{
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
   .lg\:shadow-lg{
